      useful as \code{as.data.frame.table()}, now passes \code{sep} and
      \code{base} arguments to \code{provideDimnames()}.

      \item The new \code{unirootS()} function is a \sQuote{safe}
      version of \code{uniroot()} auto-extending the search interval
      when needed.

      % advertize at all?
      % \item New \code{.lm.fit()} for benchmark lovers but not Joe
      % Average.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item In the \file{DESCRIPTION} file, \preformatted{    License: X11}
      is no longer recognized as valid.  Use \sQuote{MIT} or
      \sQuote{BSD_2_clause} instead.

      \item For consistency, entries in \file{.Rinstignore} are now matched
      case-insensitively on all platforms.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item For consistency, \command{R CMD build} now matches entries
      in \file{.Rbuildignore}  and \file{vignettes/.install_extras}
      case-insensitively on all platforms (not just on Windows).
      
      \item \code{checkFF()} (called by \command{R CMD check} by
      default) can optionally check foreign function calls for
      consistency with the registered type and argument count.  This is
      the default for \command{R CMD check --as-cran} or can be enabled
      by setting environment variable \env{_R_CHECK_FF_CALLS_} to
      \samp{registration} (but is in any case suppressed by
      \option{--install=no}).   Because this checks calls in which
      \code{.NAME} is an \R object and not just a literal character
      string, some other problems are detected for such calls.

      Functions \code{suppressForeignCheck()} and \code{dontCheck()}
      have been added to allow package authors to suppress false
      positive reports.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item \code{chol(pivot = TRUE, LINPACK = TRUE)} is defunct.

      Arguments \code{EISPACK} for \code{eigen()} and \code{LINPACK} for